tex version  paper-pdf.tex

--- a/RJreferences.bib
+++ b/RJreferences.bib
@@ -146,3 +146,76 @@ doi={https://doi.org/10.1037/h0046743}}
   pages={5},
   year={1938}
 }
+
+@misc{raven1962,
+  title={Advanced progressive matrices: Sets I and II},
+  author={Raven, John C},
+  publisher={London:H.K. Lewis.},
+  year={1962}
+}
+
+@misc{raven1998,
+  title={Court H. Coloured progressive matrices. 1998 edition},
+  author={Raven, J and Raven, JC},
+  year={1998},
+  publisher={USA: Harcourt Assesment}
+}
+
+@article{horn1968,
+  title={Organization of abilities and the development of intelligence.},
+  author={Horn, John L},
+  journal={Psychological review},
+  volume={75},
+  number={3},
+  pages={242},
+  year={1968},
+  publisher={American Psychological Association}
+}
+
+@article{horn1972,
+  title={The structure of intellect: Primary abilities},
+  author={Horn, John L},
+  journal={Multivariate personality research},
+  pages={451--511},
+  year={1972},
+  publisher={Claitor Baton Rouge}
+}
+
+@article{matzen2010,
+  title={Recreating Raven’s: Software for systematically generating large numbers of Raven-like matrix problems with normed properties},
+  author={Matzen, Laura E and Benz, Zachary O and Dixon, Kevin R and Posey, Jamie and Kroger, James K and Speed, Ann E},
+  journal={Behavior research methods},
+  volume={42},
+  number={2},
+  pages={525--541},
+  year={2010},
+  publisher={Springer}
+}
+
+@phdthesis{thimbleby2018,
+  title={Corvus: an automatic Raven's-like test generator},
+  author={Thimbleby, Isaac James},
+  year={2018},
+  school={University of Oxford}
+}
+
+@article{harris2020,
+  title={Measuring intelligence with the Sandia Matrices: Psychometric review and recommendations for free Raven-like item sets},
+  author={Harris, Alexandra M and McMillan, Jeremiah T and Listyg, Benjamin and Matzen, Laura E and Carter, Nathan},
+  journal={Personnel Assessment and Decisions},
+  volume={6},
+  number={3},
+  pages={6},
+  year={2020}
+}
+
+  @Article{Blum2018,
+    title = {Automatic generation of figural analogies with the IMak package},
+    author = {Diego Blum and Heinz Holling},
+    journal = {Frontiers in Psychology},
+    year = {2018},
+    volume = {9},
+    number = {1286},
+    pages = {1--13},
+    doi = {10.3389/fpsyg.2018.01286},
+  }
